kubernetes/apps/default/misc-ingress/app/router-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: router
  annotations:
    internal-dns.alpha.kubernetes.io/target: "internal.${SECRET_DOMAIN}"
spec:
  ingressClassName: internal
  rules:
    - host: &host "router.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: router
                port:
                  number: 8443
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: router
subsets:
  - addresses:
      - ip: "${SECRET_ROUTER_IP}"
    ports:
      - name: https
        port: 8443
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: router
spec:
  ports:
    - name: https
      port: 8443
  type: ClusterIP
